--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>g3-architects</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header_design">
@@ -71,19 +71,19 @@
 <div>
                 
                 <div class="design_box">
-                    <h4>Dexktop & Mobile Version</h4>
+                    <h4 class="title_feature1">Dexktop & Mobile Version</h4>
                     <p p class="second_description1">There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered alteration in some form, by<br>injected humour, or randomised.........</p>
                 </div>
                 <div class="design_box">
-                    <h4>Drag & Drop Builder</h4>
+                    <h4 class="title_feature1">Drag & Drop Builder</h4>
                     <p p class="second_description1">There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered alteration in some form, by<br>injected humour, or randomised.........</p>
                 </div>
                 <div class="design_box">
-                    <h4>Awesome Modern Design</h4>
+                    <h4 class="title_feature1">Awesome Modern Design</h4>
                     <p p class="second_description1">There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered alteration in some form, by<br>injected humour, or randomised.........</p>
                 </div>
                 <div class="design_box">
-                    <h4>Super Easy to Edit</h4>
+                    <h4 class="title_feature1">Super Easy to Edit</h4>
                     <p p class="second_description1">There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered alteration in some form, by<br>injected humour, or randomised.........</p>
                 </div>
             </div>
