--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="banner">
             <div class="banner_contain">
             <h1 class="banner_title">Brand New <br>Group of Architects</h1>
-            <p class="banner_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which don't look even</p>
+            <p class="banner_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in<span style="display: block;"> some form, by injected humour, or randomised words which don't look even</span></p>
                 <button type="button" class="btn_explore">Explore More</button><br><br>
                 <img src="images/banner.png" class="banner_img">
                 </div>
@@ -72,7 +72,7 @@
                 
                 <div class="design_box">
                     <h4 class="title_feature1">Dexktop & Mobile Version</h4>
-                    <p p class="second_description1">There are many variations of passages of Lorem Ipsum available, <br>but the majority have suffered alteration in some form, by<br>injected humour, or randomised.........</p>
+                    <p p class="second_description1">There are many variations of passages of Lorem Ipsum available,<span style="display: block;"> but the majority have suffered alteration in some form, by<br>injected humour, or randomised.........</span></p>
                 </div>
                 <div class="design_box">
                     <h4 class="title_feature1">Drag & Drop Builder</h4>
@@ -112,7 +112,7 @@
  <section class="forth_design">
     <div>
         <h1 class="title_feature">Some Facts</h1>
-        <p class="second_description">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+        <p class="second_description1">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
     </div><br><br>
 <div class="box_container">
 
